# pygeofilter-odata-cdse

./: .gitignore  404.html  Dockerfile  NOTICE  README.md  Taskfile.yaml  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build-and-test.yaml  build-image.yml  docs.yaml  package.yaml
attributes/: index.html
cli/: index.html
docs/: cli.md  odata-stac-crosswalk.md
geographical_op/: index.html
logical_comparison_op/: index.html
odata-stac-crosswalk/: index.html
search/: search_index.json
src/pygeocdse/: __about__.py  ast_utils.py  cli.py  evaluator.py  odata_attributes.py  sentinel1.py  sentinel1rtc.py  sentinel2.py  sentinel3.py  sentinel5p.py
src/pygeocdse/converters/: odata2geojson.py  odata2stac.py
temporal_op/: index.html
tests/: test_attributes.py  test_cdse.py  test_cdse_integration.py  test_geographic_criteria.py  test_publication_date.py  test_query_attributes.py  test_sensing_date.py
tests/artifacts/: odata_search.json
