[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygeofilter-odata-cdse"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
  { name = "Simone Tripodi", email = "simone.tripodi@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "geojson==3.2.0",
  "pystac @ git+https://github.com/Terradue/pystac.git@t2_extensions",
  "click==8.3.1",
  "pygeofilter==0.3.3",
  "shapely==2.1.2",
  "loguru==0.7.3",
  "httpx==0.28.1"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Documentation = "https://github.com/Terradue/pygeofilter-odata-cdse#readme"
Issues = "https://github.com/Terradue/pygeofilter-odata-cdse/issues"
Source = "https://github.com/Terradue/pygeofilter-odata-cdse"

[project.scripts]
odata-client = "pygeocdse.cli:main"

[tool.hatch.version]
path = "src/pygeocdse/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pygeocdse"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy==1.19.1",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pygeocdse tests}"

[tool.coverage.run]
source_pkgs = ["pygeocdse", "tests"]
branch = true
parallel = true
omit = [
  "src/pygeocdse/__about__.py",
]

[tool.coverage.paths]
pygeocdse = ["src/pygeocdse", "*/pygeocdse/src/pygeocdse"]
tests = ["tests", "*/pygeocdse/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
python_files = [
  "test_*.py",
  "tests_*.py",
]

[tool.hatch.envs.default.scripts]
test = "hatch run nose2"

[tool.hatch.envs.test]
description = "Unit test environment"
dependencies = [
  "pytest==9.0.2",
  "pytest-cov==7.0.0"
]

[tool.hatch.envs.test.scripts]
test = "pytest"
test-q = "pytest -q"
test-cov = "pytest --cov=transpiler_mate"
test-show-setup = "pytest --setup-show"

[[tool.hatch.envs.test.matrix]]
python = [
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14"
]

[tool.hatch.envs.dev]
description = "Development environment"
dependencies = [
  "ruff==0.14.6",
  "nose2==0.16.0"
]


[tool.hatch.envs.dev.scripts]
lint = "ruff format src tests"
check = "ruff check --fix src tests"
test = "nose2"
